--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
   },
   "dependencies": {
     "@heroicons/react": "v1",
@@ -17,7 +17,8 @@
     "react-currency-formatter": "^1.1.0",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "redux": "^4.0.0"
   },
   "license": "MIT",
   "devDependencies": {
