--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "with-redux-toolkit",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
+    "dev": "next dev",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider next start"
   },
   "dependencies": {
     "@heroicons/react": "v1",
