--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider next start"
+    "build": "NODE_OPTIONS= --openssl-legacy-provider next build",
+    "start": "NODE_OPTIONS= --openssl-legacy-provider next start"
   },
   "dependencies": {
     "@heroicons/react": "v1",
